--- a/package.json
+++ b/package.json
@@ -4,29 +4,30 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "express-rate-limit": "^5.3.0",
-    "helmet": "^4.6.0",
-    "http-status-codes": "^2.1.4",
-    "joi": "^17.4.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "http-status-codes": "^2.3.0",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
     "rate-limiter": "^0.2.0",
-    "swagger-ui-express": "^4.1.6",
+    "swagger-ui-express": "^5.0.0",
     "xss-clean": "^0.1.1",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.9"
+    "nodemon": "^3.0.2"
   },
   "engines": {
     "node": "14.x"
